--- a/modules/dev2plus/hw_02/src/index.html
+++ b/modules/dev2plus/hw_02/src/index.html
@@ -8,64 +8,69 @@
 </head>
 
 <body>
-    <article class="spotify-container">
-        <figure class="spotify-icon">
-            <img src="/img/spotify.svg" alt="Spotify">
-        </figure>
-        <fieldset class="spotify-form">
-            <input type="text" placeholder="Find artist or albums" class="search" />
-        </fieldset>
-    </article>
-    <article class="artist">
-        <picture class="artist-image">
-            <img src="/img/jimi-hendrix.svg" alt="Jimmi Hendrix">
-        </picture>
-        <div class="artist-wiki">
-            <h1>Jimmi Hendrix</h1>
-            <p>James Marshall "Jimi" Hendrix (born Johnny Allen Hendrix; November 27, 1942 – September 18, 1970) was an
-                American musician, singer, and songwriter. Although his mainstream career spanned only four years, he is
-                widely regarded as one of the most influential electric guitarists in the history of popular music, and
-                one
-                of the most celebrated musicians of the 20th century. The Rock and Roll Hall of Fame describes him as
-                "arguably the greatest instrumentalist in the history of rock music".</p>
-        </div>
-    </article>
-    <article class="artist-albums">
-        <h2>Albums</h2>
-        <ul>
-            <li>
-                <a href="#"><img src="/img/albums/electricladyland.jpg" alt="Electric Ladyland" /><br />
-                    Electric Ladyland<br />
-                    <span>1968</span></a>
-            </li>
-            <li><a href="#"><img src="/img/albums/R-2029325-1259516777.jpg" alt="Electric Jimmi Hendrix"><br />
-                    Electric Jimi Hendrix<br />
-                    <span>1968</span></a></li>
-            <li><a href="#"><img src="/img/albums/R-4235273-1359305384-1064.jpg" alt="A Magic Time"><br />
-                    A Magic Time<br />
-                    <span>1969</span></a></li>
-            <li><a href="#"><img src="/img/albums/Band_of_Gypsys_album.jpg" alt="Band of Gypsys"><br />
-                    Band of Gypsys<br />
-                    <span>1970</span></a></li>
-            <li><a href="#"><img src="/img/albums/live_birth_of_success.jpg" alt="Live: Birth of Success"><br />
-                    Live: Birth of Success<br />
-                    <span>1970</span></a></li>
-            <li><a href="#"><img src="/img/albums/Jimi_Hendrix_-The_Cry_Of_Love.jpg" alt="The Cry of Love"><br />
-                    The Cry of Love<br />
-                    <span>1971</span></a></li>
-            <li><a href="#"><img src="/img/albums/experience.jpg" alt="Experience"><br />
-                    Experience<br />
-                    <span>1971</span></a></li>
-            <li><a href="#"><img src="/img/albums/rainbow_bridge.jpg" alt="The Cry of Love"><br />
-                    Rainbow Bridge<br />
-                    <span>1971</span></a></li>
-            <li><a href="#"><img src="/img/albums/hendrix_in_the_west.jpg" alt="Hendrix in the West"><br />
-                    Hendrix in the West<br />
-                    <span>1972</span></a></li>
+    <div class="container">
+        <article class="spotify-container">
+            <figure class="spotify-icon">
+                <img src="/img/spotify.svg" alt="Spotify">
+            </figure>
+            <fieldset class="spotify-form">
+                <input type="text" placeholder="Find artist or albums" class="search" />
+            </fieldset>
+        </article>
+        <article class="artist">
+            <picture class="artist-image">
+                <img src="/img/jimi-hendrix.svg" alt="Jimmi Hendrix">
+            </picture>
+            <div class="artist-wiki">
+                <h1>Jimmi Hendrix</h1>
+                <p>James Marshall "Jimi" Hendrix (born Johnny Allen Hendrix; November 27, 1942 – September 18, 1970) was
+                    an
+                    American musician, singer, and songwriter. Although his mainstream career spanned only four years,
+                    he is
+                    widely regarded as one of the most influential electric guitarists in the history of popular music,
+                    and
+                    one
+                    of the most celebrated musicians of the 20th century. The Rock and Roll Hall of Fame describes him
+                    as
+                    "arguably the greatest instrumentalist in the history of rock music".</p>
+            </div>
+        </article>
+        <article class="artist-albums">
+            <h2>Albums</h2>
+            <ul>
+                <li>
+                    <a href="#"><img src="/img/albums/electricladyland.jpg" alt="Electric Ladyland" /><br />
+                        Electric Ladyland<br />
+                        <span>1968</span></a>
+                </li>
+                <li><a href="#"><img src="/img/albums/R-2029325-1259516777.jpg" alt="Electric Jimmi Hendrix"><br />
+                        Electric Jimi Hendrix<br />
+                        <span>1968</span></a></li>
+                <li><a href="#"><img src="/img/albums/R-4235273-1359305384-1064.jpg" alt="A Magic Time"><br />
+                        A Magic Time<br />
+                        <span>1969</span></a></li>
+                <li><a href="#"><img src="/img/albums/Band_of_Gypsys_album.jpg" alt="Band of Gypsys"><br />
+                        Band of Gypsys<br />
+                        <span>1970</span></a></li>
+                <li><a href="#"><img src="/img/albums/live_birth_of_success.jpg" alt="Live: Birth of Success"><br />
+                        Live: Birth of Success<br />
+                        <span>1970</span></a></li>
+                <li><a href="#"><img src="/img/albums/Jimi_Hendrix_-The_Cry_Of_Love.jpg" alt="The Cry of Love"><br />
+                        The Cry of Love<br />
+                        <span>1971</span></a></li>
+                <li><a href="#"><img src="/img/albums/experience.jpg" alt="Experience"><br />
+                        Experience<br />
+                        <span>1971</span></a></li>
+                <li><a href="#"><img src="/img/albums/rainbow_bridge.jpg" alt="The Cry of Love"><br />
+                        Rainbow Bridge<br />
+                        <span>1971</span></a></li>
+                <li><a href="#"><img src="/img/albums/hendrix_in_the_west.jpg" alt="Hendrix in the West"><br />
+                        Hendrix in the West<br />
+                        <span>1972</span></a></li>
 
-        </ul>
-    </article>
-
+            </ul>
+        </article>
+    </div>
 </body>
 
 </html>
