hw 05 basic vide captures

--- a/modules/dev2plus/hw_05/src/index.html
+++ b/modules/dev2plus/hw_05/src/index.html
@@ -17,9 +17,90 @@
 
     <div id="mediacontent">
         <video id="camera" autoplay></video>
+        <div class="buttons">
+            <button id="getUserMediaButton">Start Camera</button>
+            <button id="stopCamera" disabled>Stop Camera</button>
+            <button id="takePhotoButton" disabled>Take a Photo</button>
+        </div>
+        <!--canvas id="takePhotoCanvas"></canvas-->
+        <div class="capturedPhotos">
+            <!--div class="takedPhotoContainer">
+                <button class="close">X</button>
+                <canvas class="takedPhotoImg"></canvas>
+                <button class="save">Save</button>
+            </div-->
+            <!--div class="takedPhotoContainer">
+                <button class="close">X</button>
+                <canvas class="takedPhotoImg"></canvas>
+                <button class="save">Save</button>
+            </div>
+            <div class="takedPhotoContainer">
+                <button class="close">X</button>
+                <canvas class="takedPhotoImg"></canvas>
+                <button class="save">Save</button>
+            </div>
+            <div class="takedPhotoContainer">
+                <button class="close">X</button>
+                <canvas class="takedPhotoImg"></canvas>
+                <button class="save">Save</button>
+            </div-->
+
+        </div>
+
         <div id='root'></div>
+        <div id="output" class="output">
+            <div id="content"></div>
+            <div id="status"></div>
+            <pre id="log"></pre>
+        </div>
     </div>
 
 </body>
+<script src="src/video.js"></script>
+
+<script>
+
+
+    const ChromeSamples = {
+        log: function () {
+            let line = Array.prototype.slice.call(arguments).map(function (argument) {
+                return typeof argument === 'string' ? argument : JSON.stringify(argument);
+            }).join(' ');
+
+            document.querySelector('#log').textContent += line + '\n';
+        },
+
+        clearLog: function () {
+            document.querySelector('#log').textContent = '';
+        },
+
+        setStatus: function (status) {
+            document.querySelector('#status').textContent = status;
+        },
+
+        setContent: function (newContent) {
+            let content = document.querySelector('#content');
+            while (content.hasChildNodes()) {
+                content.removeChild(content.lastChild);
+            }
+            content.appendChild(newContent);
+        }
+    };
+
+
+    document
+        .querySelector("#getUserMediaButton")
+        .addEventListener("click", onGetUserMediaButtonClick);
+
+    document
+        .querySelector("#stopCamera")
+        .addEventListener("click", stopCamera);
+
+    document
+        .querySelector("#takePhotoButton")
+        .addEventListener("click", onTakePhotoButtonClick);
+
+
+</script>
 
 </html>
